--- a/source/index.html
+++ b/source/index.html
@@ -59,11 +59,26 @@
         </li>
       </ul>
     </nav>
-    <div class="header__intro">
-
-    </div>
   </header>
-  <script src="./js/jquery.js"></script>
+
+  <section class="intro">
+    <div class="intro__container">
+      <img src="./img/m-main-bg.jpg" width="533" height="400" alt="Многоэтажка" class="intro__img">
+      <p class="intro__text">Спроектируем, доставим и установим</p>
+      <h1 class="intro__title cd-headline letters rotate-2">
+        <span>Архитектурное освещение</span>
+        <span class="cd-words-wrapper">
+          <b class="is-visible">для&nbsp;зданий</b>
+          <b>для&nbsp;сооружений</b>
+          <b>для&nbsp;мостов&nbsp;и&nbsp;храмов</b>
+          <b>для&nbsp;домов</b>
+          <b>для&nbsp;коттеджей</b>
+          <b>для&nbsp;улиц&nbsp;и&nbsp;городов</b>
+        </span>
+      </h1>
+    </div>
+  </section>
+  <script src="./js/jquery-2.1.1.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
