Add Examples section

--- a/source/index.html
+++ b/source/index.html
@@ -89,6 +89,76 @@
       </div>
     </div>
   </section>
+
+  <section class="examples">
+    <div class="examples__wrapper js-animated" data-animation="fadeInUp">
+      <h3 class="examples__title">Делаем архитектурное освещение<br>
+        <span class="examples__title--red">для всех типов зданий и объектов</span>
+      </h3>
+      <div class="examples__container">
+        <div class="examples__item">
+          <div class="examples__item-wrapper examples__item-wrapper--1">
+            <p class="examples__text">Бизнес центры, Торговые центры и ТРЦ</p>
+          </div>
+        </div>
+        <div class="examples__item">
+          <div class="examples__item-wrapper examples__item-wrapper--2">
+            <p class="examples__text">Жилые и гостиничные комплексы</p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--3">
+          <div class="examples__item-wrapper examples__item-wrapper--3">
+            <p class="examples__text">Образовательные учреждения</p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--4">
+          <div class="examples__item-wrapper examples__item-wrapper--4">
+            <p class="examples__text">Загородные дома и коттеджи</p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--5">
+          <div class="examples__item-wrapper examples__item-wrapper--5">
+            <p class="examples__text">Мосты и транспортные развязки </p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--6">
+          <div class="examples__item-wrapper examples__item-wrapper--6">
+            <p class="examples__text">Храмы и архитектурные памятники </p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--7">
+          <div class="examples__item-wrapper examples__item-wrapper--7">
+            <p class="examples__text">Спортивные объекты и площадки </p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--8">
+          <div class="examples__item-wrapper examples__item-wrapper--8">
+            <p class="examples__text">Административные объекты </p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--9">
+          <div class="examples__item-wrapper examples__item-wrapper--9">
+            <p class="examples__text">Телевизионные вышки и башни </p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--10">
+          <div class="examples__item-wrapper examples__item-wrapper--10">
+            <p class="examples__text">Промышленные объекты </p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--11">
+          <div class="examples__item-wrapper examples__item-wrapper--11">
+            <p class="examples__text">Аэропорты и вокзалы </p>
+          </div>
+        </div>
+        <div class="examples__item examples__item--12">
+          <div class="examples__item-wrapper examples__item-wrapper--12">
+            <p class="examples__text">Парки и скверы </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="./js/jquery.js"></script>
   <script src="./js/animated-text.js"></script>
   <script src="./js/script.js"></script>
