Add Services section

--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
         <img src="./img/m-main-bg.jpg" width="533" height="400" alt="Многоэтажка" class="intro__img">
         <p class="intro__text">Спроектируем, доставим и установим</p>
         <h1 class="intro__title cd-headline letters rotate-2">
-          <span>Архитектурное<br>освещение</span>
+          <span>Архитектурное<br>освещение<br></span>
           <span class="cd-words-wrapper">
             <b class="is-visible">для&nbsp;зданий</b>
             <b>для&nbsp;сооружений</b>
@@ -118,47 +118,73 @@
         </div>
         <div class="examples__item examples__item--5">
           <div class="examples__item-wrapper examples__item-wrapper--5">
-            <p class="examples__text">Мосты и транспортные развязки </p>
+            <p class="examples__text">Мосты и транспортные развязки</p>
           </div>
         </div>
         <div class="examples__item examples__item--6">
           <div class="examples__item-wrapper examples__item-wrapper--6">
-            <p class="examples__text">Храмы и архитектурные памятники </p>
+            <p class="examples__text">Храмы и архитектурные памятники</p>
           </div>
         </div>
         <div class="examples__item examples__item--7">
           <div class="examples__item-wrapper examples__item-wrapper--7">
-            <p class="examples__text">Спортивные объекты и площадки </p>
+            <p class="examples__text">Спортивные объекты и площадки</p>
           </div>
         </div>
         <div class="examples__item examples__item--8">
           <div class="examples__item-wrapper examples__item-wrapper--8">
-            <p class="examples__text">Административные объекты </p>
+            <p class="examples__text">Административные объекты</p>
           </div>
         </div>
         <div class="examples__item examples__item--9">
           <div class="examples__item-wrapper examples__item-wrapper--9">
-            <p class="examples__text">Телевизионные вышки и башни </p>
+            <p class="examples__text">Телевизионные вышки и башни</p>
           </div>
         </div>
         <div class="examples__item examples__item--10">
           <div class="examples__item-wrapper examples__item-wrapper--10">
-            <p class="examples__text">Промышленные объекты </p>
+            <p class="examples__text">Промышленные объекты</p>
           </div>
         </div>
         <div class="examples__item examples__item--11">
           <div class="examples__item-wrapper examples__item-wrapper--11">
-            <p class="examples__text">Аэропорты и вокзалы </p>
+            <p class="examples__text">Аэропорты и вокзалы</p>
           </div>
         </div>
         <div class="examples__item examples__item--12">
           <div class="examples__item-wrapper examples__item-wrapper--12">
-            <p class="examples__text">Парки и скверы </p>
+            <p class="examples__text">Парки и скверы</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <section class="services">
+    <div class="services__wrapper">
+      <div class="services__description">
+        <p class="services__text js-animated" data-animation="fadeInUp">Возьмём все заботы на себя</p>
+        <p class="services__title js-animated" data-animation="fadeInUp">Вы <span class="services__title--red">получите всё</span> в одном месте: от концепции и до реализации проекта под ключ</p>
+        <p class="services__text services__text--big js-animated" data-animation="fadeInUp">с гарантией не менее 6 лет</p>
+      </div>
+      <div class="services__callback callback js-animated" data-animation="fadeInRight">
+        <div class="callback__wrapper">
+          <div class="callback__modal modal">
+            <p class="modal__title">По телефону перезвоню и сориентирую по
+              стоимости <b>уже через 15 минут</b></p>
+            <form action="send.php" class="modal__form form">
+              <div class="form__field">
+                <label for="phone1" class="visually-hidden">Контакный телефон</label>
+                <input type="tel" name="phone" id="phone1" class="form__input form__input--small" placeholder="Ваш номер телефона">
+              </div>
+              <button class="form__submit form__submit--small" type="submit">Заказать звонок для консультации</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="./js/jquery.js"></script>
   <script src="./js/animated-text.js"></script>
   <script src="./js/script.js"></script>
