Add Adjustment section

--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
     <nav class="header__navigation navigation">
       <ul class="navigation__list">
         <li>
-          <a href="" class="navigation__item">Услуги</a>
+          <a href="#services" class="navigation__item">Услуги</a>
         </li>
         <li>
           <a href="" class="navigation__item">Виды освещения</a>
@@ -160,12 +160,14 @@
     </div>
   </section>
 
-  <section class="services">
+  <section class="services" id="services">
     <div class="services__wrapper">
       <div class="services__description">
         <p class="services__text js-animated" data-animation="fadeInUp">Возьмём все заботы на себя</p>
-        <p class="services__title js-animated" data-animation="fadeInUp">Вы <span class="services__title--red">получите всё</span> в одном месте: от концепции и до реализации проекта под ключ</p>
-        <p class="services__text services__text--big js-animated" data-animation="fadeInUp">с гарантией не менее 6 лет</p>
+        <p class="services__title js-animated" data-animation="fadeInUp">Вы <span class="services__title--red">получите
+            всё</span> в одном месте: от концепции и до реализации проекта под ключ</p>
+        <p class="services__text services__text--big js-animated" data-animation="fadeInUp">с гарантией не менее 6 лет
+        </p>
       </div>
       <div class="services__callback callback js-animated" data-animation="fadeInRight">
         <div class="callback__wrapper">
@@ -175,11 +177,73 @@
             <form action="send.php" class="modal__form form">
               <div class="form__field">
                 <label for="phone1" class="visually-hidden">Контакный телефон</label>
-                <input type="tel" name="phone" id="phone1" class="form__input form__input--small" placeholder="Ваш номер телефона">
+                <input type="tel" name="phone" id="phone1" class="form__input form__input--small"
+                  placeholder="Ваш номер телефона">
               </div>
               <button class="form__submit form__submit--small" type="submit">Заказать звонок для консультации</button>
             </form>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="adjustment">
+    <div class="adjustment__wrapper">
+      <div class="adjustment__block js-animated" data-animation="fadeInLeft">
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number">1</p>
+          <img src="./img/adj-1.webp" alt="Дизайн светотехнической концепции" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Дизайн и разработка светотехнической концепции</h4>
+        </div>
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number">2</p>
+          <img src="./img/adj-2.webp" alt="Разработка сметной документации" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Разработка и согласование<br> проектно - сметной документации</h4>
+        </div>
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number">3</p>
+          <img src="./img/adj-3.webp" alt="Инженерное проектирование" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Инженерное<br>проектирование</h4>
+        </div>
+      </div>
+      <div class="adjustment__block js-animated" data-animation="fadeInRight">
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number">4</p>
+          <img src="./img/adj-4.webp" alt="Поставка оборудования и материалов" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Поставка оборудования и<br>материалов</h4>
+        </div>
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number">5</p>
+          <img src="./img/adj-5.webp" alt="Строительно-монтажные работы" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Строительно-монтажные<br>работы</h4>
+        </div>
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number">6</p>
+          <img src="./img/adj-6.webp" alt="Диагностика и обслуживание" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Диагностика и <br>обслуживание</h4>
+        </div>
+      </div>
+    </div>
+    <div class="adjustment__text-wrapper js-animated" data-animation="fadeInLeft">
+      <p class="adjustment__text">Дополнительные услуги</p>
+    </div>
+    <div class="adjustment__wrapper">
+      <div class="adjustment__block js-animated" data-animation="fadeInUp">
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number adjustment-item__number--grey">7</p>
+          <img src="./img/adj-7.webp" alt="Согласование альбома-концепции" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Согласование альбома-концепции</h4>
+        </div>
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number adjustment-item__number--grey">8</p>
+          <img src="./img/adj-8.webp" alt="Шеф-монтаж оборудования" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Шеф-монтаж оборудования</h4>
+        </div>
+        <div class="adjustment__item adjustment-item">
+          <p class="adjustment-item__number adjustment-item__number--grey">9</p>
+          <img src="./img/adj-9.webp" alt="Авторский надзор" class="adjustment-item__img">
+          <h4 class="adjustment-item__title">Авторский надзор</h4>
         </div>
       </div>
     </div>
