Add Types section

--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
           <a href="#services" class="navigation__item">Услуги</a>
         </li>
         <li>
-          <a href="" class="navigation__item">Виды освещения</a>
+          <a href="#types" class="navigation__item">Виды освещения</a>
         </li>
         <li>
           <a href="" class="navigation__item">Портфолио</a>
@@ -249,6 +249,60 @@
     </div>
   </section>
 
+  <section class="types" id="types">
+    <div class="types__wrapper">
+      <h3 class="types__title js-animated" data-animation="fadeInUp">
+        <span class="types__title--red">Профессионально занимаемся</span>
+        <br>
+        всеми типами фасадного освещения
+      </h3>
+      <div class="types__container js-animated" data-animation="fadeInUp">
+        <div class="types__item type">
+          <img src="./img/types-1.jpg" alt="Заливающая" class="type__img">
+          <h4 class="type__title">Заливающая</h4>
+          <p class="type__text">
+            Такой тип подсветки используется для освещения фасадов по всему объему здания, равномерным заливающим светом. Особо популярен при создании иллюминации общественных зданий
+          </p>
+        </div>
+        <div class="types__item type">
+          <img src="./img/types-2.jpg" alt="Контурная" class="type__img">
+          <h4 class="type__title">Контурная</h4>
+          <p class="type__text">
+						Контурное освещение выделяет геометрию здания, создаёт искусственное очертание объекта. Данный приём можно считать необходимой вещью для создания индивидуального образа высотных зданий
+          </p>
+        </div>
+        <div class="types__item type">
+          <img src="./img/types-3.jpg" alt="Световой фасад" class="type__img">
+          <h4 class="type__title">Световой фасад</h4>
+          <p class="type__text">
+						Решение, позволяющее сформировать образ объекта или его силуэт без каких-либо манипуляций с внешней частью здания. Идеально подойдет для сложной фасадной системы выполненной из стекла
+          </p>
+        </div>
+        <div class="types__item type">
+          <img src="./img/types-4.jpg" alt="Фоновая" class="type__img">
+          <h4 class="type__title">Фоновая</h4>
+          <p class="type__text">
+						Благодаря данному виду подсветки становится возможным расставить акценты на фасаде здания и избежать излишнего светового загрязнения фасада. Один из самых часто используемых приемов. Подходит для любых задач и объемов
+          </p>
+        </div>
+        <div class="types__item type">
+          <img src="./img/types-5.jpg" alt="Локальная" class="type__img">
+          <h4 class="type__title">Локальная</h4>
+          <p class="type__text">
+						Особенной чертой конкретного типа подсветки является способность разделения здания на необходимые объемы, что позволяет совсем по-другому увидеть фасад в темное время суток. Неотъемлемая часть среди сложных и многогранных фасадов
+          </p>
+        </div>
+        <div class="types__item type">
+          <img src="./img/types-6.jpg" alt="Динамическая" class="type__img">
+          <h4 class="type__title">Динамическая</h4>
+          <p class="type__text">
+						Подсветка данного типа задает световые сценарии и способна передать заданную идею в динамике. Привлечет необходимое внимание к объекту и сделает его поводом для обсуждения
+          </p>
+        </div>
+      </div>
+      <button class="form__submit form__submit--types" type="button">Заказать архитектурное освещение</button>
+    </div>
+  </section>
   <script src="./js/jquery.js"></script>
   <script src="./js/animated-text.js"></script>
   <script src="./js/script.js"></script>
