Add Master section --WIP

--- a/source/index.html
+++ b/source/index.html
@@ -261,46 +261,104 @@
           <img src="./img/types-1.jpg" alt="Заливающая" class="type__img">
           <h4 class="type__title">Заливающая</h4>
           <p class="type__text">
-            Такой тип подсветки используется для освещения фасадов по всему объему здания, равномерным заливающим светом. Особо популярен при создании иллюминации общественных зданий
+            Такой тип подсветки используется для освещения фасадов по всему объему здания, равномерным заливающим
+            светом. Особо популярен при создании иллюминации общественных зданий
           </p>
         </div>
         <div class="types__item type">
           <img src="./img/types-2.jpg" alt="Контурная" class="type__img">
           <h4 class="type__title">Контурная</h4>
           <p class="type__text">
-						Контурное освещение выделяет геометрию здания, создаёт искусственное очертание объекта. Данный приём можно считать необходимой вещью для создания индивидуального образа высотных зданий
+            Контурное освещение выделяет геометрию здания, создаёт искусственное очертание объекта. Данный приём можно
+            считать необходимой вещью для создания индивидуального образа высотных зданий
           </p>
         </div>
         <div class="types__item type">
           <img src="./img/types-3.jpg" alt="Световой фасад" class="type__img">
           <h4 class="type__title">Световой фасад</h4>
           <p class="type__text">
-						Решение, позволяющее сформировать образ объекта или его силуэт без каких-либо манипуляций с внешней частью здания. Идеально подойдет для сложной фасадной системы выполненной из стекла
+            Решение, позволяющее сформировать образ объекта или его силуэт без каких-либо манипуляций с внешней частью
+            здания. Идеально подойдет для сложной фасадной системы выполненной из стекла
           </p>
         </div>
         <div class="types__item type">
           <img src="./img/types-4.jpg" alt="Фоновая" class="type__img">
           <h4 class="type__title">Фоновая</h4>
           <p class="type__text">
-						Благодаря данному виду подсветки становится возможным расставить акценты на фасаде здания и избежать излишнего светового загрязнения фасада. Один из самых часто используемых приемов. Подходит для любых задач и объемов
+            Благодаря данному виду подсветки становится возможным расставить акценты на фасаде здания и избежать
+            излишнего светового загрязнения фасада. Один из самых часто используемых приемов. Подходит для любых задач и
+            объемов
           </p>
         </div>
         <div class="types__item type">
           <img src="./img/types-5.jpg" alt="Локальная" class="type__img">
           <h4 class="type__title">Локальная</h4>
           <p class="type__text">
-						Особенной чертой конкретного типа подсветки является способность разделения здания на необходимые объемы, что позволяет совсем по-другому увидеть фасад в темное время суток. Неотъемлемая часть среди сложных и многогранных фасадов
+            Особенной чертой конкретного типа подсветки является способность разделения здания на необходимые объемы,
+            что позволяет совсем по-другому увидеть фасад в темное время суток. Неотъемлемая часть среди сложных и
+            многогранных фасадов
           </p>
         </div>
         <div class="types__item type">
           <img src="./img/types-6.jpg" alt="Динамическая" class="type__img">
           <h4 class="type__title">Динамическая</h4>
           <p class="type__text">
-						Подсветка данного типа задает световые сценарии и способна передать заданную идею в динамике. Привлечет необходимое внимание к объекту и сделает его поводом для обсуждения
+            Подсветка данного типа задает световые сценарии и способна передать заданную идею в динамике. Привлечет
+            необходимое внимание к объекту и сделает его поводом для обсуждения
           </p>
         </div>
       </div>
       <button class="form__submit form__submit--types" type="button">Заказать архитектурное освещение</button>
+    </div>
+  </section>
+
+  <section class="master">
+    <div class="master__overlay"></div>
+    <div class="master__wrapper">
+      <div class="master__header">
+        <div class="master__description">
+          <h5 class="master__title">Не знаете какой <span class="master__title--red">тип освещения</span> выбрать?</h5>
+          <p class="master__head-text">
+            Мы можем отправить к Вам специалиста, который проконсультирует и предложит варианты освещения, подходящий
+            именно Вам
+          </p>
+          <p class="master__warning">Выезд специалиста БЕСПЛАТНО!</p>
+        </div>
+        <div class="master__callback callback callback--master">
+          <div class="callback__wrapper">
+            <div class="callback__modal modal">
+              <p class="modal__warning">Вызовите специалиста</p>
+              <p class="modal__title">Подберем для Вас все варианты освещения и бесплатно проконсультируем</p>
+              <form action="send.php" class="modal__form form">
+                <div class="form__field">
+                  <label for="phone2" class="visually-hidden">Контакный телефон</label>
+                  <input type="tel" name="phone" id="phone2" class="form__input form__input--small"
+                    placeholder="Введите номер телефона">
+                </div>
+                <button class="form__submit" type="submit">Вызвать специалиста</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p class="master__text">При подборе освещения учитываем:</p>
+      <div class="master__plan plan">
+        <div class="plan__item plan__item--type">
+          <p class="plan__text">Тип объекта</p>
+        </div>
+        <div class="plan__item plan__item--size">
+          <p class="plan__text">Габариты объекта</p>
+        </div>
+        <div class="plan__item plan__item--around">
+          <p class="plan__text">Окружение объекта</p>
+        </div>
+        <div class="plan__item plan__item--style">
+          <p class="plan__text">Стилистическое архитектурное решение</p>
+        </div>
+        <div class="plan__item plan__item--normative">
+          <p class="plan__text">Нормы и требования к освещению</p>
+        </div>
+      </div>
     </div>
   </section>
   <script src="./js/jquery.js"></script>
