--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
           <a href="#types" class="navigation__item">Виды освещения</a>
         </li>
         <li>
-          <a href="" class="navigation__item">Портфолио</a>
+          <a href="#portfolio" class="navigation__item">Портфолио</a>
         </li>
         <li>
           <a href="" class="navigation__item">Контакты</a>
@@ -317,14 +317,15 @@
     <div class="master__wrapper">
       <div class="master__header">
         <div class="master__description">
-          <h5 class="master__title">Не знаете какой <span class="master__title--red">тип освещения</span> выбрать?</h5>
-          <p class="master__head-text">
+          <h5 class="master__title js-animated" data-animation="fadeInUp">Не знаете какой <span
+              class="master__title--red">тип освещения</span> выбрать?</h5>
+          <p class="master__head-text js-animated" data-animation="fadeInUp">
             Мы можем отправить к Вам специалиста, который проконсультирует и предложит варианты освещения, подходящий
             именно Вам
           </p>
-          <p class="master__warning">Выезд специалиста БЕСПЛАТНО!</p>
+          <p class="master__warning js-animated" data-animation="fadeInUp">Выезд специалиста БЕСПЛАТНО!</p>
         </div>
-        <div class="master__callback callback callback--master">
+        <div class="master__callback callback callback--master js-animated" data-animation="fadeInUp">
           <div class="callback__wrapper">
             <div class="callback__modal modal">
               <p class="modal__warning">Вызовите специалиста</p>
@@ -361,6 +362,131 @@
       </div>
     </div>
   </section>
+
+  <section class="portfolio" id="portfolio">
+    <h2 class="portfolio__title">За год мы установили <span class="portfolio__title--red">26 420 светильников</span> и
+      реализовали <span class="portfolio__title--red">87 проектов</span> архитектурного освещения по всей России</h2>
+    <p class="portfolio__text">посмотрите некоторые наши проекты</p>
+    <ul class="portfolio__menu">
+      <li>
+        <a href="#" class="portfolio__menu-item portfolio__menu-item--active" data-index="0">Все</a>
+      </li>
+      <li>
+        <a href="#" class="portfolio__menu-item" data-index="1">Торговые центры</a>
+      </li>
+      <li>
+        <a href="#" class="portfolio__menu-item" data-index="2">Жилые и гостиничные комплексы</a>
+      </li>
+      <li>
+        <a href="#" class="portfolio__menu-item" data-index="3">Мосты и транспортные развязки</a>
+      </li>
+      <li>
+        <a href="#" class="portfolio__menu-item" data-index="4">Храмы</a>
+      </li>
+      <li>
+        <a href="#" class="portfolio__menu-item" data-index="5">Дома и коттеджи</a>
+      </li>
+      <li>
+        <a href="#" class="portfolio__menu-item" data-index="6">Исторические здания</a>
+      </li>
+      <li>
+        <a href="#" class="portfolio__menu-item" data-index="7">Административные здания</a>
+      </li>
+    </ul>
+    <div class="portfolio__container">
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="1" data-alt="ТРЦ" style="background-image: url(./img/portfolio-1.jpg);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="1" data-alt="ТРЦ «Новомосковский»" style="background-image: url(./img/portfolio-2.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="1" data-alt="ТЦ «Brosko Mall»" style="background-image: url(./img/portfolio-3.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="1" data-alt="ТЦ «Март»" style="background-image: url(./img/portfolio-4.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="1" data-alt="ТЦ «Можайский Двор»" style="background-image: url(./img/portfolio-5.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="1" data-alt="ТЦ «Севастополь»" style="background-image: url(./img/portfolio-6.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="2" data-alt="Жилой комплекс «Трианон»" style="background-image: url(./img/portfolio-7.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="2" data-alt="Жилой комплекс г. Екатеринбург" style="background-image: url(./img/portfolio-8.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="2" data-alt="Отель «Marins Park Hotel»" style="background-image: url(./img/portfolio-9.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="3" data-alt="Мост в г. Белгород" style="background-image: url(./img/portfolio-10.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="3" data-alt="Мост через Волгу" style="background-image: url(./img/portfolio-11.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="3" data-alt="Транспортная развязка г. Белгород" style="background-image: url(./img/portfolio-12.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="4" data-alt="Памятник в Луксоре" style="background-image: url(./img/portfolio-13.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="4" data-alt="Площадь в Калининграде" style="background-image: url(./img/portfolio-14.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="4" data-alt="Поклонный крест г. Нижний Новгород" style="background-image: url(./img/portfolio-15.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="4" data-alt="Спасская часовня г. Нижний Новгород" style="background-image: url(./img/portfolio-16.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="5" data-alt="P_k4" style="background-image: url(./img/portfolio-17.jpg);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="5" data-alt="Коттедж" style="background-image: url(./img/portfolio-18.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="5" data-alt="Визуализация коттеджа" style="background-image: url(./img/portfolio-19.png);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="5" data-alt="Загородный дом" style="background-image: url(./img/portfolio-20.jpg);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="6" data-alt="Ликеро-водочный завод" style="background-image: url(./img/portfolio-21.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="6" data-alt="Нижегородский кремль" style="background-image: url(./img/portfolio-22.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="6" data-alt="Освещение федерального казначейства г. Владимир" style="background-image: url(./img/portfolio-23.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="6" data-alt="Освещение федерального казначейства" style="background-image: url(./img/portfolio-24.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="6" data-alt="Памятник культуры на ул. Остоженка" style="background-image: url(./img/portfolio-25.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="6" data-alt="подсветка Нижегородского кремля" style="background-image: url(./img/portfolio-26.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="7" data-alt="«Транснефть»" style="background-image: url(./img/portfolio-27.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="7" data-alt="Аэропорт г. Норильск" style="background-image: url(./img/portfolio-28.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="7" data-alt="Кинотеатр «Октябрь»" style="background-image: url(./img/portfolio-29.webp);"></a>
+      </div>
+      <div class="portfolio__item">
+        <a href="#" class="portfolio__link" data-index="7" data-alt="Школа г. Гыда" style="background-image: url(./img/portfolio-30.webp);"></a>
+      </div>
+    </div>
+  </section>
+
   <script src="./js/jquery.js"></script>
   <script src="./js/animated-text.js"></script>
   <script src="./js/script.js"></script>
